<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz">
<LinearLayout
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
    android:layout_marginBottom="@dimen/bottom_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/cardElevation">

     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        />
        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="@dimen/top_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >

            <android.support.v7.widget.AppCompatEditText
                android:textStyle="bold"
                android:id="@+id/answer_Q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="answer" />
        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardElevation">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            />

        <RadioGroup
            android:id="@+id/radioGroup_Q2"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton_Q2_A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer_2_1" />

            <RadioButton
                android:id="@+id/radioButton_Q2_A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer_2_2" />

            <RadioButton
                android:id="@+id/radioButton_Q2_A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer_2_3" />

            <RadioButton
                android:id="@+id/radioButton_Q2_A4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/answer_2_4" />
        </RadioGroup>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardElevation">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            />
        <LinearLayout
             android:layout_marginTop="@dimen/top_margin"
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">

            <CheckBox
                android:layout_weight="1"
                android:id="@+id/checkBox_A1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_1" />
            <CheckBox
                android:layout_weight="1"
                android:id="@+id/checkBox_A2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_2" />
            <CheckBox
                android:layout_weight="1"
                android:id="@+id/checkBox_A3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_3" />
            <CheckBox
                android:layout_weight="1"
                android:id="@+id/checkBox_A4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer_3_4" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardElevation">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            />
        <RadioGroup
            android:id="@+id/radioGroup_Q4"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton_Q4_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="YES" />

            <RadioButton
                android:id="@+id/radioButton_Q4_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="NO" />


        </RadioGroup>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginBottom="@dimen/bottom_margin_Last_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardElevation">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            />
        <RadioGroup
            android:id="@+id/radioGroup_Q5"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton_Q5_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="YES" />

            <RadioButton
                android:id="@+id/radioButton_Q5_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="NO" />


        </RadioGroup>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="send_Answer"
        android:text="@string/send_answer" />
</LinearLayout>
</ScrollView>